# drydowns

./: CHANGELOG.md  README.md  environment_linux.yml  environment_minimal.yml  environment_win.yml  pyproject.toml  requirements.txt
analysis/: Agent.py  Data.py  DrydownModel.py  Event.py  EventSeparator.py  MyLogger.py  SMAPgrid.py  __main__.py  config.ini  config.py  drydown_models.ipynb  test_Ltheta_vs_PET_vs_LAI_from_pt_sample.py  test_exp_model_from_pt_sample2.ipynb  test_exp_model_from_pt_sample_concat_all_results.ipynb  test_plot_histogram_ampm.py  test_q_model_from_pt_sample.ipynb  test_q_model_from_pt_sample_viz.ipynb  toweragent.py  towerdata.py  towerevent.py  towerseparator.py  utils.py
analysis/.ipynb_checkpoints/: Data-checkpoint.py  DrydownModel-checkpoint.py  Event-checkpoint.py  EventSeparator-checkpoint.py  Model-checkpoint.py  __main__-checkpoint.py  config-checkpoint.ini  log-checkpoint.txt  singerPET_create_datarods_v3-checkpoint.py  test_Ltheta_vs_PET-checkpoint.py  test_area_sample_PETandLtheta-checkpoint.ipynb  test_area_sample_PETandLtheta-checkpoint.py  test_area_sample_dask_x_xarray-checkpoint.ipynb  test_area_sample_dask_x_xarray-checkpoint.py  test_area_sample_viz_output-checkpoint.ipynb
analysis/trash/: check_SMAPL4data.ipynb  test_area_sample_PETandLtheta - Kenya.ipynb  test_area_sample_PETandLtheta - US.ipynb  test_area_sample_PETandLtheta - temp.py  test_area_sample_PETandLtheta.py  test_calc_Ltheta.ipynb  test_calc_Ltheta_2.ipynb  test_calc_metrics.py  tutorial_sparse.ipynb  (+10 more)
code/: DrydownModel.py  Event.py  SMAPgrid.py  towermodel.py
(+51 files in other folders)
