[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drydown"
version = "0.0.1"
description = "Software for processing data acquired from UAVs for ecohydrological research."
authors = [
    { name = "Ryoko Araki", email = "raraki8159@sdsu.edu"},
    { name = "Bryn Morgan", email = "brynmorgan@ucsb.edu" }
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["soil moisture", "plant water use", "hydrology", "ecohydrology"]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/ecohydro/drydown"
# documentation = 
# repository = "https://github.com/ecohydro/drydown.git"
# changelog = "https://github.com/ecohydro/drydown/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["drydown*"]
